crates/cribo/tests/snapshots/bundled_code@module_alias_namespace_escape.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/module_alias_namespace_escape/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
package_helper = _cribo.types.SimpleNamespace(__name__='package.helper', __doc__='Simple helper module used through a module-object alias.')
package = _cribo.types.SimpleNamespace(__name__='package', __initializing__=False, __initialized__=False, __path__=[])
package.helper = package_helper
"""Simple helper module used through a module-object alias."""
MESSAGE = "module namespace preserved"
def helper():
    """Keep one callable export on the namespace for regression coverage."""
    return MESSAGE.upper()
package_helper.MESSAGE = MESSAGE
package_helper.helper = helper
"""Package for module namespace tree-shaking coverage."""
"""Ensure module-object reads still preserve the imported namespace surface."""
helper_module = package.helper
def read_message(module):
    """Read a value from a module object passed through another binding."""
    return module.MESSAGE
def main():
    module_ref = helper_module
    print(read_message(module_ref))
if __name__ == "__main__":
    main()
helper = package.helper
