crates/cribo/tests/snapshots/bundled_code@module_attribute_fstring.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/module_attribute_fstring/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
mypackage_constants = _cribo.types.SimpleNamespace(__name__='mypackage.constants')
mypackage = _cribo.types.SimpleNamespace(__name__='mypackage', __initializing__=False, __initialized__=False)
mypackage.constants = mypackage_constants
VERSION = "1.0.0"
mypackage_constants.VERSION = VERSION
mypackage_utils = _cribo.types.SimpleNamespace(__name__='mypackage.utils', __initializing__=False, __initialized__=False)
def _cribo_init___cribo_dbce9e_mypackage_utils(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        self.__initializing__ = False
        return self
    VERSION = mypackage_constants.VERSION
    mypackage_utils.VERSION = VERSION

    def get_version():
        return VERSION
    self.get_version = get_version
    self.__initialized__ = True
    self.__initializing__ = False
    return self
mypackage_utils.__init__ = _cribo_init___cribo_dbce9e_mypackage_utils
mypackage.utils = mypackage_utils
def _cribo_init___cribo_a9fdaa_mypackage(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        self.__initializing__ = False
        return self
    global mypackage_utils
    self.__initializing__ = True
    mypackage_utils = _cribo_init___cribo_dbce9e_mypackage_utils(mypackage_utils)
    get_version = mypackage.utils.get_version
    self.get_version = get_version
    self.constants = mypackage_constants
    self.constants = mypackage_constants
    self.__initialized__ = True
    self.__initializing__ = False
    return self
mypackage.__init__ = _cribo_init___cribo_a9fdaa_mypackage
__cribo_init_result = _cribo_init___cribo_a9fdaa_mypackage(mypackage)
for attr in dir(__cribo_init_result):
    if not attr.startswith('_'):
        setattr(mypackage, attr, getattr(__cribo_init_result, attr))
print(f"Version: {mypackage.get_version()}")
