crates/cribo/tests/snapshots/bundled_code@module_first_resolution.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/module_first_resolution/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import types
def __cribo_init___cribo_e25798_foo():
    module = types.SimpleNamespace()
    source = "foo/__init__.py (package)"
    module.source = source
    value = "CORRECT - package"
    module.value = value
    print("Successfully imported foo package")
    return module
_cribo_temp_foo = __cribo_init___cribo_e25798_foo()
foo = _cribo_temp_foo
print(f"Imported foo from: {foo.source}")
print(f"foo.value = {foo.value}")
