crates/cribo/tests/snapshots/bundled_code@multiline_strings_test.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/multiline_strings_test/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

"""Test multiline string handling in bundler."""
simple_multiline = """This is a\nmultiline string\nwith actual newlines"""
module_with_doc = """\nModule with multiline docstring.\n\nThis docstring has:\n- Multiple lines\n- Blank lines\n- Special characters: \t tab\n"""
name = "World"
greeting = f"""Hello {name}!\nWelcome to\nmultiline f-strings"""
raw_multiline = r"""Raw string
with \n escape sequences
that should be preserved"""
def my_function():
    """\n    Function docstring.\n    \n    Multiple lines here too.\n    """
    return "result"
class MyClass:
    """\n    Class docstring.\n    \n    Also multiline.\n    """

    def method(self):
        """Method docstring."""
        pass
print("simple_multiline:", repr(simple_multiline))
print("module_with_doc:", repr(module_with_doc))
print("greeting:", repr(greeting))
print("raw_multiline:", repr(raw_multiline))
