crates/cribo/tests/snapshots/bundled_code@namespace_forward_reference.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/namespace_forward_reference/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import json
import types
JSONDecodeError = json.JSONDecodeError
class MyJSONError(JSONDecodeError, Exception):
    """Error class that inherits from JSONDecodeError"""

    def __init__(self, *args):
        JSONDecodeError.__init__(self, *args)
        Exception.__init__(self, str(args[0]) if args else "")
MyJSONError.__module__ = 'mypkg.exceptions'
mypkg = types.SimpleNamespace(__name__='mypkg')
mypkg_exceptions = types.SimpleNamespace(__name__='mypkg.exceptions')
mypkg.exceptions = mypkg_exceptions
mypkg_compat = types.SimpleNamespace(__name__='mypkg.compat')
mypkg.compat = mypkg_compat
mypkg_exceptions.MyJSONError = MyJSONError
mypkg_compat.JSONDecodeError = JSONDecodeError
try:
    raise MyJSONError("Test error", "doc", 42)
except MyJSONError as e:
    print(f"Caught error: {e}")
    print("SUCCESS")
