crates/cribo/tests/snapshots/bundled_code@pydantic_project.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/pydantic_project/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

from typing import Optional
from pydantic import BaseModel, EmailStr, Field, ValidationError
import re
import types
"""Utils package initialization."""
def validate_email(email: str) -> bool:
    """Simple email validation."""
    pattern = r"^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$"
    return bool(re.match(pattern, email))
"""Validation utilities."""
"""Schemas package initialization."""
def __cribo_init___cribo_f275a8_schemas_user():
    module = types.SimpleNamespace()
    """User schema definitions using Pydantic."""
    from pydantic import BaseModel, EmailStr, Field

    class UserSchema(BaseModel):
        """User model with Pydantic validation."""
        name: str = Field(..., min_length=1, max_length=100, description="User's full name")
        email: EmailStr = Field(..., description="User's email address")
        age: int = Field(..., ge=0, le=150, description="User's age")
        is_active: bool = Field(default=True, description="Whether the user is active")
        bio: Optional[str] = Field(default=None, max_length=500, description="User's biography")

        class Config:
            """Pydantic configuration."""
            json_encoders = {}
            json_schema_extra = {"example": {"name": "John Doe", "email": "john@example.com", "age": 30, "is_active": True, "bio": "Software developer"}}
    module.UserSchema = UserSchema

    class CreateUserRequest(BaseModel):
        """Request model for creating a new user."""
        name: str = Field(..., min_length=1, max_length=100)
        email: EmailStr
        age: Optional[int] = Field(default=None, ge=0, le=150)
        bio: Optional[str] = Field(default=None, max_length=500)
    module.CreateUserRequest = CreateUserRequest

    class UserResponse(BaseModel):
        """Response model for user data."""
        id: int
        name: str
        email: str
        age: int
        is_active: bool
        bio: Optional[str] = None
    module.UserResponse = UserResponse
    return module
schemas = types.SimpleNamespace()
schemas.__name__ = 'schemas'
utils = types.SimpleNamespace()
utils.__name__ = 'utils'
_cribo_temp_schemas_user = __cribo_init___cribo_f275a8_schemas_user()
schemas.user = _cribo_temp_schemas_user
UserSchema = schemas.user.UserSchema
CreateUserRequest = schemas.user.CreateUserRequest
UserResponse = schemas.user.UserResponse
"""Pydantic test project entry point."""
def main():
    """Main function demonstrating Pydantic usage."""
    user_data = {"name": "John Doe", "email": "john@example.com", "age": 25}
    try:
        user = UserSchema(**user_data)
        print(f"Created user: {user}")
        if validate_email(user.email):
            print("Email validation passed")
        user_json = user.model_dump_json()
        print(f"User JSON: {user_json}")
        request = CreateUserRequest(name="Jane Doe", email="jane@example.com")
        print(f"Create request: {request}")
    except ValidationError as e:
        print(f"Validation error: {e}")
if __name__ == "__main__":
    main()
